--- a/vignettes/clusterExperiment.Rmd
+++ b/vignettes/clusterExperiment.Rmd
@@ -15,9 +15,8 @@ vignette: >
 -->
 
 ```{r options, results="hide", include=FALSE, cache=FALSE, results='hide', message=FALSE}
-## change cache to FALSE
-knitr::opts_chunk$set(fig.align="center", cache=TRUE, cache.path = "clusterExperimentTutorial_cache/", fig.path="clusterExperimentTutorial_figure/",error=FALSE, #make it stop on error
-fig.width=6,fig.height=6,autodep=TRUE,out.width="600px",out.height="600px", results="markup", echo=TRUE, eval=TRUE)
+knitr::opts_chunk$set(fig.align="center", cache=FALSE,error=FALSE, #make it stop on error
+fig.width=6, fig.height=6, autodep=TRUE, out.width="600px", out.height="600px", results="markup", echo=TRUE, eval=TRUE)
 #knitr::opts_knit$set(stop_on_error = 2L) #really make it stop
 #knitr::dep_auto()
 options(getClass.msg=FALSE) #get rid of annoying messages about cache until fixed internally in R
@@ -32,10 +31,11 @@ filterCount <- function(counts, nRead=5, nCell=5){
 ## library(bioc2016singlecell) ## add back when ready
 
 ## for now load individual dependencies
-library(clusterExperiment)
+library(clusterExperiment) ## use develop for now
 library(SummarizedExperiment)
 library(EDASeq)
 library(RUVSeq)
+library(cluster)
 ```
 
 # Introduction
@@ -45,6 +45,114 @@ This is the second part of the Bioc2016 workshop "Analysis of single-cell RNA-se
 In this part we will cover cluster analysis with the `r Githubpkg("epurdom/clusterExperiment")` package. The package will be in Bioconductor devel soon.
 
 The goal of `clusterExperiment` is to encourage the user to try many different clustering algorithms in one package structure. We give tools for running many different clusterings and choices of parameters. We also provide visualization to compare many different clusterings and algorithms to find common shared clustering patterns. We implement common post-processing steps unrelated to the specific clustering algorithm (e.g. subsampling the data for stability, finding cluster-specific markers).
+
+## An example dataset
+
+We will start from the normalized data obtained in the first part of the workshop with `r Githubpkg("YosefLab/scone")`. The normalized data can be loaded directly from the workshop package.
+
+```{r datain, eval=TRUE}
+## data(normalized) ...eventually
+
+## for now
+load("../data/input.rda")
+
+## Filter genes
+counts <- as.matrix(counts[,1:91])
+gene_filter <- filterCount(counts, nRead = 20, nCell = 5)
+
+counts <- counts[which(gene_filter),]
+dim(counts)
+
+## Housekeeping genes
+hk <- intersect(hk, rownames(counts))
+
+## Normalization
+fq <- betweenLaneNormalization(counts, which="full")
+ruv <- RUVg(fq, hk, k=1, round=FALSE)
+counts <- ruv$normalizedCounts
+counts[counts<0] <- 0
+
+# Summarized Experiment
+se <- SummarizedExperiment(list(counts=counts))
+
+```
+
+## Motivation
+
+The most common workflow for single-cell clustering found in the literature is to start from some
+form of normalized gene-level summaries (often on the log-scale), and perform the following steps:
+
+1. Dimensionality reduction (usually PCA or t-SNE or most variable genes).
+2. Compute a distance matrix between samples in the reduced space (usually Euclidean distance).
+3. Clustering based on a partitioning method (usually k-means or PAM).
+
+Each of these steps forces the researcher to make some choices, e.g.,
+
+* How many principal components?
+* Which distance? Euclidean, correlation, rank-based, ...
+* How many clusters?
+
+These choices are very likely to impact the results.
+
+```{r pca}
+pca <- prcomp(t(log1p(assay(se))), center=TRUE, scale=TRUE)
+plot(pca$x, pch=19, col=bigPalette[bio])
+legend("topleft", levels(bio), fill=bigPalette)
+
+res1 <- pam(pca$x[,1:2], k=3)
+
+pairs(pca$x[,1:3], pch=19, col=bigPalette[res1$cluster])
+
+res2 <- pam(pca$x[,1:3], k=3)
+
+pairs(pca$x[,1:3], pch=19, col=bigPalette[res2$cluster])
+
+plot(pca$sdev^2/sum(pca$sdev^2))
+
+res3 <- pam(pca$x[,1:6], k=3)
+
+pairs(pca$x[,1:3], pch=19, col=bigPalette[res3$cluster])
+```
+
+The main idea behind `clusterExperiment` (`r Githubpkg("epurdom/clusterExperiment")`) is to automatically perform and compare several clustering results, based on all possible combinations of parameters, and to find a consensus across the different clusterings.
+
+To repeat this simple example within the `clusterExperiment` framework, we can use the function `clusterMany`.
+
+```{r pca_cm}
+cm <- clusterMany(se, isCount=TRUE, dimReduce="PCA",  nPCADims=c(2, 3, 6), 
+                  ks = 3, clusterFunction = "pam")
+cm
+apply(clusterMatrix(cm), 2, table)
+```
+
+One of the main features of the package is the ease of visualization: For instance,
+we can directly compare the three results with `plotClusters`.
+
+```{r plot_cm}
+defaultMar <- par("mar")
+plotCMar <- c(1.1,8.1,4.1,1.1)
+par(mar=plotCMar)
+
+plotClusters(cm)
+```
+
+We can also find a consensus across the different choices.
+
+```{r combine_cm}
+cm <- combineMany(cm)
+plotClusters(cm)
+cm
+```
+
+Notice that samples are now marked as `-1`'s to indicate that these are unclustered samples.
+In this case, we obtain such samples because of the default option `miSize=5` which discards all
+the clusters with less than 5 samples.
+
+Note that, unlike each individual call to `pam`, we do not obtain `k = 3` clusters.
+In general, `combineMany` results in a larger number of smaller clusters, that can then be
+merged with the `mergeClusters` function.
+
+The basic premise of our workflow is to find small, robust clusters of samples, and then merge them into larger clusters as relevant. We find that many algorithmic methods for choosing the appropriate number of clusters for methods  err on the side of too few clusters. However, we find in practice that we tend to prefer to err on finding many clusters and then merging them based on examining the data.
 
 ## The `clusterExperiment` workflow
 
@@ -56,111 +164,31 @@ The basic intended clustering workflow is
     - Find a hierarchical clustering of the clusters found by `combineMany` using `makeDendrogram`
     - Merge together clusters of this hierarchy based on the percentage of differential expression, using `mergeClusters`.
 
-The basic premise of our workflow is to find small, robust clusters of samples, and then merge them into larger clusters as relevant. We find that many algorithmic methods for choosing the appropriate number of clusters for methods  err on the side of too few clusters. However, we find in practice that we tend to prefer to err on finding many clusters and then merging them based on examining the data.
-
 ## Additional functionalities of `clusterExperiment`
 
 The package encodes many common practices that are shared across clustering algorithms, like subsampling the data, computing silhouette width, sequential clustering procedures, and so forth. We describe here the basic expected usage of the package. Additional functionality is available in the `r Githubpkg("epurdom/clusterExperiment")` vignette and manual pages.
 
-## An example dataset
+# RSEC: Resampling-based Sequential Ensemble Clustering
 
-We will start from the normalized data obtained in the first part of the workshop with `r Githubpkg("YosefLab/scone")`. The normalized data can be loaded directly from the workshop package.
+One of the main use of the package is to apply the RSEC algorithm to single-cell RNA-seq data.
+The `RSEC` function is a wrapper around the main functions of the package and implements the following steps:
 
-```{r datain, eval=TRUE}
-## data(normalized) ...eventually
+1. Cluster analysis with `clusterMany`.
+2. Find a consensus with `combineMany`.
+3. Merge clusters together with `makeDendrogram` and `mergeClusters`.
 
-## for now
-load("~/git/scone_analysis/imageAfterFilteringE4.RData")
-
-#----- ExpressionSet
-oe <- sf.sc.eSet
-
-#----- Order cells by batch wi bio
-bio <- droplevels(oe$MD_expt_condition)
-bio <- sub("K5ERP63CKO_UI", "KO", bio)
-bio <- sub("K5ERRY_UI", "WT", bio)
-oe$MD_expt_condition <- as.factor(bio)
-
-oe <- oe[,order(droplevels(oe$MD_expt_condition),droplevels(oe$MD_c1_run_id))]
-rownames(oe) <- sapply(rownames(oe),tolower)
-counts <- assayData(oe)$counts_table
-
-## Randomly select samples
-sample_filter <- sample(1:NCOL(counts), 100)
-head(sample_filter)
-
-oe <- oe[, sample_filter]
-dim(oe)
-
-## Filter genes
-gene_filter <- filterCount(counts, nRead = 20, nCell = 50)
-
-oe <- oe[which(gene_filter),]
-dim(oe)
-counts <- assayData(oe)$counts_table
-
-## Housekeeping genes
-hk0 <- scan("~/git/scone_analysis/HKlistD1.txt", what="character")
-hk0 <- sapply(hk0,tolower)
-names(hk0) <- NULL
-
-hk <- intersect(hk0,rownames(oe))
-
-#----- QC data, rm cols 6:9 NaN
-qc <- as.matrix(protocolData(oe)@data[,-(6:9)])
-
-## Normalization
-fq <- betweenLaneNormalization(counts, which="full")
-ruv <- RUVg(fq, hk, k=1, round=FALSE)
-counts <- ruv$normalizedCounts
-
-# Summarized Experiment
-se <- SummarizedExperiment(list(counts=counts), colData=DataFrame(qc))
-
+```{r rsec}
+rs <- RSEC(se, isCount=TRUE, nPCADims=c(10, 20), alphas=c(0.2, 0.3),  mergeCutoff=0.01,
+           clusterFunction="hierarchical01", combineProportion=0.5, combineMinSize=3)
+rs
 ```
 
-# Step 1: Cluster Analysis with `clusterMany`
-
-The first important function in the package is `clusterMany`. It takes as input either a matrix, a list of matrices, or a `SummarizedExperiment` object. In this tutorial we will use the latter.
-
-There are many parameters that can be changed in the functions, for most of them there are two intended uses: one value means that the parameter will be fixed, a range of values means that all the values will be tried to allow comparisons.
-
-```{r clusterMany, eval=FALSE}
-ce <- clusterMany(se, isCount=TRUE, dimReduce=c("PCA", "var"), nPCADims=c(25, 50), 
-                  nVarDims = c(500, 1000), clusterFunction=c("hierarchical01"), 
-                  ks=5:15, alphas=c(0.3), subsample=TRUE, 
-                  subsampleArgs=list(clusterFunction="kmeans", resamp.num=100, samp.p=0.7), 
-                  sequential=TRUE, seqArgs=list(beta=0.9 ,k.min=3, top.can=5, verbose=FALSE),
-                  ncores=3)
-```
-
-```{r clusterMany_load}
-## change with data()
-load("../data/clustermany_res.rda")
-ce
-```
-
-In the call above, we have set the following parameters using a single value.
-
-* `clusterFunction` is set to "hierarchical01" to use hierarchical clustering to cluster the co-clustering matrix of the subsamplings.
-* `alphas` is set to 0.3.
-* `subsample` and `sequential` are set to TRUE to perform subsampling and sequential clustering.
-
-The parameters with a range of values are the following.
-
-* `dimReduce`: use either PCA or most variable genes for clustering.
-* `nPCADims`: use either 10 or 50 PCs for PCA.
-* `nVarDims`: use either top 500 or 1000 most variable genes.
-* `ks`: use between 5 and 15 as the value of `k` in `kmeans`.
-
-As we can see from the output, we generated many different clusterings. One way to visualize them is through the `plotClusters` function. 
+The `plotClusters` function is a good way to get a sense of how many clusterings we tried
+and to visualize the consensus across parameters.
 
 ```{r plotClusterEx1}
-defaultMar <- par("mar")
-plotCMar <- c(1.1,8.1,4.1,1.1)
 par(mar=plotCMar)
-
-plotClusters(ce, main="Clusters from clusterMany", axisLine=-1)
+plotClusters(rs, main="Clusters from RSEC", axisLine=-1)
 ```
 
 This plot shows the samples in the columns, and different clusterings on the rows. Each sample is color coded based on its clustering for that row, where the colors have been chosen to try to match up clusters across different clusterings that show large overlap. Moreover, the samples have been ordered so that each subsequent clustering (starting at the top and going down) will try to order the samples to keep the clusters together, without rearranging the clustering blocks of the previous clustering/row.
@@ -170,38 +198,11 @@ We can see that some clusters are fairly stable across different choices of dime
 To retrieve the actual results of each clustering, we can use the `clusterMatrix` and `primaryClusters` functions.
 
 ```{r clusterMatrix}
-head(clusterMatrix(ce)[,1:3])
-table(primaryCluster(ce))
+head(clusterMatrix(rs)[,1:3])
+table(primaryCluster(rs))
 ```
 
-After a call to `clusterMany` the primary clusters are simply defined as the first parameter combinations (i.e., the first column of `clusterMatrix`). We can change this, if we want, say, to select the third clustering as our preferred choice.
-
-```{r setCluster}
-primaryClusterIndex(ce) <- 3
-ce
-```
-
-# Step 2: Find a consensus with `combineMany`
-
-To find a consensus clustering across the many different clusterings created by `clusterMany` the function `combineMany` can be used next. 
-
-```{r combineMany}
-ce <- combineMany(ce, proportion = 0.6, minSize = 5)
-```
-
-Notice we get a warning that we did not specify any clusters to combine, so it is using the default -- those from the previous call. 
-
-If we look at the `clusterMatrix` of the returned `ce` object, we see that the new cluster from `combineMany` has been added to the existing clusterings. This is the basic strategy of the functions in this package. Any clustering that is created is added to existing clusterings, so the user does not need to keep track of past clusterings and can easily compare what has changed. 
-
-```{r lookAtCombineMany}
-head(clusterMatrix(ce)[,1:3])
-par(mar=plotCMar)
-plotClusters(ce)
-```
-
-The proportion argument regulates how many times two samples need to be in the same cluster across parameters to be together in the combined clustering. Decreasing the value of `proportion` results in fewer "unclustered" (i.e., -1) samples. Another parameter that controls the number of unassigned samples is `minSize`, which discards the combined clusters with less than `minSize` samples.
-
-# Step 3: Merge clusters together with `makeDendrogram` and `mergeClusters`
+## A few details on `mergeClusters`
 
 It is not uncommon that `combineMany` will result in too many small clusters, which in practice are too closely related to be useful. Since our final goal is to find gene markers for each clusters, we argue that we can merge clusters that show no or little differential expression (DE) between them.
 
@@ -210,18 +211,18 @@ This functionality is implemented in the `mergeClusters` function. `mergeCluster
 Here, we use the 1,000 most variable genes to make the cluster hierarchy.
 
 ```{r makeDendrogram}
-ce<-makeDendrogram(ce, dimReduce="var", ndims=1000)
+ce <- makeDendrogram(rs, whichCluster = "combineMany", dimReduce="mad", ndims=1000)
 plotDendrogram(ce)
 ```
 
 It is useful to first run `mergeClusters` without actually creating any object so as to preview what the final clustering will be (and perhaps to help in setting the cutoff).
 
 ```{r mergeClustersPlot}
-mergeClusters(ce, mergeMethod="adjP", plot="mergeMethod")
+mergeClusters(ce, mergeMethod="adjP", plot="mergeMethod", cutoff=0.01, isCount=TRUE)
 ```
 
 ```{r mergeClusters}
-ce <- mergeClusters(ce,mergeMethod="adjP",cutoff=0.01)
+ce <- mergeClusters(ce, mergeMethod="adjP", plot="none", cutoff=0.01, isCount=TRUE)
 par(mar=plotCMar)
 plotClusters(ce)
 plotCoClustering(ce,whichClusters=c("mergeClusters","combineMany"))
@@ -229,15 +230,71 @@ plotCoClustering(ce,whichClusters=c("mergeClusters","combineMany"))
 
 Notice that `mergeClusters` combines clusters based on the actual values of the features, while the `coClustering` plot shows how often the samples clustered together.
 
-Finally, we can do a heatmap visualizing this final step of clustering.
-
-```{r plotHeatmap}
-plotHeatmap(ce, clusterSamplesData="dendrogramValue", breaks=.99)
-```
-
-# Step 4: Find marker genes with `getBestFeatures`
+# Find marker genes with `getBestFeatures`
 
 ## Limma with voom weights
+
+Once we are satisfied with our clustering, the next step is usually to identify marker genes
+for each of the clusters.
+
+The simplest way is to use differentially expressed (DE) genes to identify such markers.
+First, we will use `limma` as a way to compute DE genes.
+
+When comparing multiple classes (in this case, cell types), the simplest way to identify DE
+genes is to look for genes DE in at least one class. This can be done using an F-test.
+
+The utility function `getBestFeatures` uses the `lmFit` and `topTable` functions from limma
+to find such DE genes.
+
+```{r dendro_merge}
+rs <- makeDendrogram(rs, dimReduce="mad", ndims=1000)
+```
+
+```{r getBestFeatures}
+genesF <- getBestFeatures(rs, contrastType="F", number=500, isCount=TRUE)
+head(genesF)
+```
+
+```{r getBestFeatures_heatmap}
+plotHeatmap(rs, clusterSamplesData="dendrogramValue",
+            clusterFeaturesData=unique(genesF[,"IndexInOriginal"]),
+            main="F statistics",
+            breaks=.99)
+```
+
+The F statistic is not particularly useful to identify markers. The `getBestFeatures`
+function offers three alternative approaches.
+
+* `Pairs`: finds DE genes corresponding to all pairwise comparisons.
+* `OneAgainstAll`: finds DE genes comparing one cluster vs. the average of all the others.
+* `Dendro`: uses the cluster hierarchy (from the dendrogram) to compute only important contrasts.
+
+```{r pairwise}
+genesPairs <- getBestFeatures(rs, contrastType="Pairs", number=50, isCount=TRUE)
+
+plotHeatmap(rs, clusterSamplesData="dendrogramValue",
+            clusterFeaturesData=unique(genesPairs[,"IndexInOriginal"]),
+            main="All pairwise comparisons",
+            breaks=.99)
+```
+
+```{r one_all}
+genesOneAll <- getBestFeatures(rs, contrastType="OneAgainstAll", number=50, isCount=TRUE)
+
+plotHeatmap(rs, clusterSamplesData="dendrogramValue",
+            clusterFeaturesData=unique(genesOneAll[,"IndexInOriginal"]),
+            main="One versus All",
+            breaks=.99)
+```
+
+```{r dendro}
+genesDendro <- getBestFeatures(rs, contrastType="Dendro", number=50, isCount=TRUE)
+
+plotHeatmap(rs, clusterSamplesData="dendrogramValue",
+            clusterFeaturesData=unique(genesDendro[,"IndexInOriginal"]),
+            main="Constrasts based on dendrogram",
+            breaks=.99)
+```
 
 ## Account for zero-inflation with MAST
 
